Adding a bunch of article links, some with AI-drafted news summaries

--- a/2025/2025-10-05-wir.md
+++ b/2025/2025-10-05-wir.md
@@ -4,6 +4,26 @@
 ![Closeup of typewriter letters](https://w3w.news/img/csabi-elter-unsplash-3000.jpg)
 *Photo by Csabi Elter via [Unsplash](https://unsplash.com/@bulgakovmihaly)*
 
+**Lead item goes here.** Yadda yadda yadda.
+
+Some candidates:
+
+- Lubin: Crypto has no time for "silly partisan politics."
+
+<!--
+
+This one could be a summary, or maybe even something to riff on as a lead item. Some links:
+
+- Block coverage of his recent reamarks: https://www.theblock.co/post/373207/partisan-politics-consensys-joe-lubin
+
+- Good file photo: https://commons.wikimedia.org/w/index.php?search=Joseph+Lubin&title=Special%3AMediaSearch&type=image
+
+- Wikipedia entry: https://en.wikipedia.org/wiki/Joseph_Lubin_(entrepreneur)
+
+-->
+
+- JPM sees bitcoin benefiting from a "debasement trade" ([The Block](https://www.theblock.co/post/373241/jpmorgan-bitcoin-price-165000-debasement-trade))
+
 ### Week in Review: Sept. 28 to Oct. 4, 2025
 
 <!--
@@ -14,11 +34,19 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
 -->
 
-- Trading freeze in DAT company's shares. An interesting test case. <!-- Link TK -->
-- tk
-- tk
-- tk
-- tk
+- After a summer of enthusiasm, corporate interest in stockpiling cryptocurrencies like bitcoin has cooled, with many companies seeing their shares drop and some trading below the value of their digital-asset holdings. The slowdown is attributed to an oversupply of crypto treasury companies and regulatory scrutiny, though some are exploring mergers and acquisitions to consolidate their positions. | The allure of cryptocurrencies is losing steam for some companies, as a glut of crypto treasury firms and increased regulatory scrutiny have led to a decline in their value and trading below their digital holdings. However, some firms are exploring consolidation through mergers and acquisitions to stay afloat in the shifting market. ([Wall Street Journal](https://www.wsj.com/finance/currencies/crypto-stockpiling-craze-cools-after-red-hot-summer-d1b6dce2?st=StdiWh&reflink=desktopwebshare_permalink)) <!-- Draft news summaries by Leo/Llama 3.1 8B --> | The US Securities and Exchange Commission (SEC) has temporarily suspended trading of QMMM Holdings due to concerns over potential stock manipulation linked to the firm's pivot into cryptocurrency holdings. The suspension comes as part of a broader investigation into several companies over similar crypto-linked stock surges, highlighting the risks and potential pitfalls of crypto treasury strategies that have become increasingly popular among small-cap firms. ([Cryptonews](https://cryptonews.com/news/sec-suspends-trading-of-qmmm-holdings-amid-crypto-treasury-manipulation-probe/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+
+- SWIFT is working on a ledger for cross-border payments. ([CoinDesk](https://www.coindesk.com/business/2025/09/29/swift-to-develop-blockchain-based-ledger-for-24-7-cross-border-payments)) <!-- Beware the paywall on this one. May need to find a more permissive link. -->
+
+- Pending applications to list Solana and Litecoin ETFs could be held up by the U.S. government shutdown. ([CoinDesk](https://www.coindesk.com/markets/2025/09/30/here-s-what-happens-to-solana-litecoin-etfs-if-the-u-s-shuts-down))
+
+- AI updates: California just passed a major AI safety law. ([New York Times](https://www.nytimes.com/2025/09/29/technology/california-ai-safety-law.html)) <!-- Need a Google News referral on this one. --> | Open AI | China looking to exploit it as an opportunity to lure away talent: https://www.reuters.com/sustainability/sustainable-finance-reporting/chinas-new-k-visa-beckons-foreign-tech-talent-us-hikes-h-1b-fee-2025-09-29/ | And so is Canada: https://www.cicnews.com/2025/09/canada-to-target-tech-talent-us-fee-hike-0960276.html
+
+- The scramble for global tech workers: Fear among SV green card holders due to U.S. tightening on H1-B visas. https://www.mercurynews.com/2025/04/05/h1b-foreign-tech-workers-silicon-valley-travel-fears/ ([San Jose Mercury News](https://www.mercurynews.com/2025/04/05/h1b-foreign-tech-workers-silicon-valley-travel-fears/)) | OpenAI's latest funding round values the company at $500 billion, which tops SpaceX's capitalization. LOL. https://finance.yahoo.com/news/openai-completes-share-sale-record-043148719.html
+
+- Polymarket is prepping for an "imminent" U.S. launch. https://decrypt.co/342676/morning-minute-polymarket-prepares-for-imminent-u-s-launch
+
+- White House crackdown on U.S. trading with subsidiaries of foreign-owned companies: https://www.nytimes.com/2025/09/29/business/economy/trump-entity-list-rule-change.html
 
 ### Market Snapshot <!-- See spreadsheet at https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?gid=1586624920#gid=1586624920 -->
 
@@ -76,13 +104,18 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 </table>
 
 ### Looking Ahead
-- Vanguard exploring new crypto services. <!-- Link TK -->
-- tk
-- tk
+
+- Vanguard, the world's second-largest asset manager, is reportedly considering allowing its brokerage clients to access third-party cryptocurrency exchange-traded funds (ETFs), a potential reversal of its previous stance against digital asset products. This shift comes in response to growing client demand for exposure to the crypto market, as well as changing regulatory dynamics that have made it easier for crypto ETFs to be approved. ([The Block](https://www.theblock.co/post/372531/vanguard-crypto-etf-access)) <!-- Draft news summary by Leo/Claude Haiku -->
+
+- Swedish lawmakers have proposed creating a national Bitcoin reserve, citing its potential to diversify state holdings and provide inflation protection. The proposal, which aims to position Sweden for a shift in the global financial infrastructure, comes as other countries, including the US, UK, and Kazakhstan, have also explored the idea of establishing strategic Bitcoin reserves. ([Decrypt](https://decrypt.co/342657/swedish-lawmakers-propose-national-bitcoin-reserve)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+
+- OKX founder Star Xu says the U.S. and U.K. are aligning on crypto oversight. ([Fortune](https://fortune.com/crypto/2025/09/29/the-u-s-and-u-k-are-aligning-on-blockchain-and-thats-good-for-the-world-economy/))
 
 ### Odds & Ends
-- tk
-- tk
+
+- Dave Winer still calls it "Twitter." http://scripting.com/2025/10/01/151233.html?title=weLikeTwitterSoBloggingMustBeDead ([]())
+
+- Ronan Day-Lewis called his father Daniel by his character's name while filming. Says it felt "natural." OK, dude. Whatever...  ([Variety](https://variety.com/2025/film/news/anemone-director-ronan-day-lewis-daniel-day-lewis-method-acting-1236537026/))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
