New photo + writing through news summaries

--- a/2025/2025-10-05-wir.md
+++ b/2025/2025-10-05-wir.md
@@ -1,28 +1,20 @@
 # TKTK
 ## TKTK
 
-![Closeup of typewriter letters](https://w3w.news/img/csabi-elter-unsplash-3000.jpg)
-*Photo by Csabi Elter via [Unsplash](https://unsplash.com/@bulgakovmihaly)*
+![Collage of different countries' currencies](https://w3w.news/img/cash-john-mcarthur-unsplash-2500.jpg)
+*Photo by John McArthur via [Unsplash](https://unsplash.com/@snowjam)*
 
 **Lead item goes here.** Yadda yadda yadda.
 
-Some candidates:
-
-- Lubin: Crypto has no time for "silly partisan politics."
-
-<!--
-
-This one could be a summary, or maybe even something to riff on as a lead item. Some links:
-
-- Block coverage of his recent reamarks: https://www.theblock.co/post/373207/partisan-politics-consensys-joe-lubin
-
-- Good file photo: https://commons.wikimedia.org/w/index.php?search=Joseph+Lubin&title=Special%3AMediaSearch&type=image
-
-- Wikipedia entry: https://en.wikipedia.org/wiki/Joseph_Lubin_(entrepreneur)
-
--->
-
 - JPM sees bitcoin benefiting from a "debasement trade" ([The Block](https://www.theblock.co/post/373241/jpmorgan-bitcoin-price-165000-debasement-trade))
+
+- Bitcoin flirted with a new record Friday. https://www.coindesk.com/markets/2025/10/03/bitcoin-surges-above-usd123k-nearing-new-record-as-bullish-q4-sentiment-fuels-weeklong-rally | https://www.coindesk.com/research/stablecoins-and-cbdcs-report-september-2025
+
+- Lubin: Crypto has no time for "silly partisan politics." Block coverage of his recent reamarks: https://www.theblock.co/post/373207/partisan-politics-consensys-joe-lubin |  Wikipedia entry: https://en.wikipedia.org/wiki/Joseph_Lubin_(entrepreneur)
+
+- SWIFT is working on a ledger for cross-border payments. ([CoinDesk](https://www.coindesk.com/business/2025/09/29/swift-to-develop-blockchain-based-ledger-for-24-7-cross-border-payments)) <!-- Beware the paywall on this one. May need to find a more permissive link. -->
+
+- EU sounds alarm on stablecoins. https://decrypt.co/342858/eu-risk-watchdog-sounds-alarm-on-stablecoin-safeguards | Stablecoin market cap surpasses $300B https://www.theblock.co/post/373314/stablecoin-market-cap-surpasses-300-billion-for-first-time-amid-crypto-rebound
 
 ### Week in Review: Sept. 28 to Oct. 4, 2025
 
@@ -34,19 +26,15 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
 -->
 
-- After a summer of enthusiasm, corporate interest in stockpiling cryptocurrencies like bitcoin has cooled, with many companies seeing their shares drop and some trading below the value of their digital-asset holdings. The slowdown is attributed to an oversupply of crypto treasury companies and regulatory scrutiny, though some are exploring mergers and acquisitions to consolidate their positions. | The allure of cryptocurrencies is losing steam for some companies, as a glut of crypto treasury firms and increased regulatory scrutiny have led to a decline in their value and trading below their digital holdings. However, some firms are exploring consolidation through mergers and acquisitions to stay afloat in the shifting market. ([Wall Street Journal](https://www.wsj.com/finance/currencies/crypto-stockpiling-craze-cools-after-red-hot-summer-d1b6dce2?st=StdiWh&reflink=desktopwebshare_permalink)) <!-- Draft news summaries by Leo/Llama 3.1 8B --> | The US Securities and Exchange Commission (SEC) has temporarily suspended trading of QMMM Holdings due to concerns over potential stock manipulation linked to the firm's pivot into cryptocurrency holdings. The suspension comes as part of a broader investigation into several companies over similar crypto-linked stock surges, highlighting the risks and potential pitfalls of crypto treasury strategies that have become increasingly popular among small-cap firms. ([Cryptonews](https://cryptonews.com/news/sec-suspends-trading-of-qmmm-holdings-amid-crypto-treasury-manipulation-probe/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **DAT shakeout:** After a summer of enthusiasm, corporate interest in stockpiling cryptocurrencies like bitcoin has cooled, with many companies seeing their shares drop and some trading below the value of their digital-asset holdings. The slowdown is attributed to an oversupply of crypto treasury companies and regulatory scrutiny, though some are exploring mergers and acquisitions to consolidate their positions. | The allure of cryptocurrencies is losing steam for some companies, as a glut of crypto treasury firms and increased regulatory scrutiny have led to a decline in their value and trading below their digital holdings. However, some firms are exploring consolidation through mergers and acquisitions to stay afloat in the shifting market. ([Wall Street Journal](https://www.wsj.com/finance/currencies/crypto-stockpiling-craze-cools-after-red-hot-summer-d1b6dce2?st=StdiWh&reflink=desktopwebshare_permalink)) <!-- Draft news summaries by Leo/Llama 3.1 8B --> | The US Securities and Exchange Commission (SEC) has temporarily suspended trading of QMMM Holdings due to concerns over potential stock manipulation linked to the firm's pivot into cryptocurrency holdings. The suspension comes as part of a broader investigation into several companies over similar crypto-linked stock surges, highlighting the risks and potential pitfalls of crypto treasury strategies that have become increasingly popular among small-cap firms. ([Cryptonews](https://cryptonews.com/news/sec-suspends-trading-of-qmmm-holdings-amid-crypto-treasury-manipulation-probe/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- SWIFT is working on a ledger for cross-border payments. ([CoinDesk](https://www.coindesk.com/business/2025/09/29/swift-to-develop-blockchain-based-ledger-for-24-7-cross-border-payments)) <!-- Beware the paywall on this one. May need to find a more permissive link. -->
+-  OpenAI's latest funding round values the company at $500 billion, which tops SpaceX's capitalization. LOL. https://finance.yahoo.com/news/openai-completes-share-sale-record-043148719.html
 
-- Pending applications to list Solana and Litecoin ETFs could be held up by the U.S. government shutdown. ([CoinDesk](https://www.coindesk.com/markets/2025/09/30/here-s-what-happens-to-solana-litecoin-etfs-if-the-u-s-shuts-down))
+- The scramble for global tech workers: Fear among SV green card holders due to U.S. tightening on H1-B visas. https://www.mercurynews.com/2025/04/05/h1b-foreign-tech-workers-silicon-valley-travel-fears/ ([San Jose Mercury News](https://www.mercurynews.com/2025/04/05/h1b-foreign-tech-workers-silicon-valley-travel-fears/)) | China looking to exploit it as an opportunity to lure away talent: https://www.reuters.com/sustainability/sustainable-finance-reporting/chinas-new-k-visa-beckons-foreign-tech-talent-us-hikes-h-1b-fee-2025-09-29/ | And so is Canada: https://www.cicnews.com/2025/09/canada-to-target-tech-talent-us-fee-hike-0960276.html | Chip deal with UAE on the rocks: https://www.wsj.com/politics/policy/nvidia-trump-uae-chip-deal-delay-c49aaa5c
 
-- AI updates: California just passed a major AI safety law. ([New York Times](https://www.nytimes.com/2025/09/29/technology/california-ai-safety-law.html)) <!-- Need a Google News referral on this one. --> | Open AI | China looking to exploit it as an opportunity to lure away talent: https://www.reuters.com/sustainability/sustainable-finance-reporting/chinas-new-k-visa-beckons-foreign-tech-talent-us-hikes-h-1b-fee-2025-09-29/ | And so is Canada: https://www.cicnews.com/2025/09/canada-to-target-tech-talent-us-fee-hike-0960276.html
+- https://decrypt.co/342859/samsung-brings-coinbase-access-75m-wallet-users-latest-crypto-embrace | https://www.cnbc.com/2025/10/03/walmart-onepay-is-rolling-out-crypto-to-mobile-banking-app.html
 
-- The scramble for global tech workers: Fear among SV green card holders due to U.S. tightening on H1-B visas. https://www.mercurynews.com/2025/04/05/h1b-foreign-tech-workers-silicon-valley-travel-fears/ ([San Jose Mercury News](https://www.mercurynews.com/2025/04/05/h1b-foreign-tech-workers-silicon-valley-travel-fears/)) | OpenAI's latest funding round values the company at $500 billion, which tops SpaceX's capitalization. LOL. https://finance.yahoo.com/news/openai-completes-share-sale-record-043148719.html
-
-- Polymarket is prepping for an "imminent" U.S. launch. https://decrypt.co/342676/morning-minute-polymarket-prepares-for-imminent-u-s-launch
-
-- White House crackdown on U.S. trading with subsidiaries of foreign-owned companies: https://www.nytimes.com/2025/09/29/business/economy/trump-entity-list-rule-change.html
+- California just passed a major AI safety law. ([New York Times](https://www.nytimes.com/2025/09/29/technology/california-ai-safety-law.html)) <!-- Need a Google News referral on this one.
 
 ### Market Snapshot <!-- See spreadsheet at https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?gid=1586624920#gid=1586624920 -->
 
@@ -115,7 +103,8 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
 - Dave Winer still calls it "Twitter." http://scripting.com/2025/10/01/151233.html?title=weLikeTwitterSoBloggingMustBeDead ([]())
 
-- Ronan Day-Lewis called his father Daniel by his character's name while filming. Says it felt "natural." OK, dude. Whatever...  ([Variety](https://variety.com/2025/film/news/anemone-director-ronan-day-lewis-daniel-day-lewis-method-acting-1236537026/))
+- Economist crunches numbers on WNBA pay parity. https://www.nytimes.com/interactive/2025/10/03/opinion/wnba-pay.html
+
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
