Writing through news summaries

--- a/2025/2025-10-05-wir.md
+++ b/2025/2025-10-05-wir.md
@@ -34,7 +34,7 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
 - https://decrypt.co/342859/samsung-brings-coinbase-access-75m-wallet-users-latest-crypto-embrace | https://www.cnbc.com/2025/10/03/walmart-onepay-is-rolling-out-crypto-to-mobile-banking-app.html
 
-- California just passed a major AI safety law. ([New York Times](https://www.nytimes.com/2025/09/29/technology/california-ai-safety-law.html)) <!-- Need a Google News referral on this one.
+- California just passed a major AI safety law. ([New York Times](https://www.nytimes.com/2025/09/29/technology/california-ai-safety-law.html)) <!-- Need a Google News referral on this one. -->
 
 ### Market Snapshot <!-- See spreadsheet at https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?gid=1586624920#gid=1586624920 -->
 
@@ -97,14 +97,12 @@ I'm thinking of using the news article in this browser tab in my upcoming newsle
 
 - Swedish lawmakers have proposed creating a national Bitcoin reserve, citing its potential to diversify state holdings and provide inflation protection. The proposal, which aims to position Sweden for a shift in the global financial infrastructure, comes as other countries, including the US, UK, and Kazakhstan, have also explored the idea of establishing strategic Bitcoin reserves. ([Decrypt](https://decrypt.co/342657/swedish-lawmakers-propose-national-bitcoin-reserve)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- OKX founder Star Xu says the U.S. and U.K. are aligning on crypto oversight. ([Fortune](https://fortune.com/crypto/2025/09/29/the-u-s-and-u-k-are-aligning-on-blockchain-and-thats-good-for-the-world-economy/))
+- **OKX founder Star Xu praised regulators** in Washington and London for their increasing alignment on oversight of digital assets. He says closer collaboration could help further entrench the U.S. and Britain as global finance centers versus aspiring hubs like Singapore and Dubai. ([Fortune](https://fortune.com/crypto/2025/09/29/the-u-s-and-u-k-are-aligning-on-blockchain-and-thats-good-for-the-world-economy/))
 
 ### Odds & Ends
 
-- Dave Winer still calls it "Twitter." http://scripting.com/2025/10/01/151233.html?title=weLikeTwitterSoBloggingMustBeDead ([]())
-
-- Economist crunches numbers on WNBA pay parity. https://www.nytimes.com/interactive/2025/10/03/opinion/wnba-pay.html
-
+- **Economist David Berri took a stab** at quantifying how underpaid WNBA players are compared to men in the NBA. While the men's league does bring in 50 times the revenue of the WNBA, its top players make 200 times the salaries of the WNBA's stars, Berri says. ([Economist](https://news.google.com/read/CBMid0FVX3lxTE9kNjF0UFQ3NWt6d0JGelRRZzY3Mm9BN2ppbWZlbXRhUEpscndZTjl1bmprV2pmQU05NjZBeU41LU9DVjlCQnVORWl4ZmtTaERzMWdaQ1hnUHAwZ1FfaU1hZU9rd184TlhRVFpCSUJnN19RS1prdWxn?hl=en-US&gl=US&ceid=US%3Aen))
+- **Count web pioneer Dave Winer** among the folks who [still refer](http://scripting.com/2025/10/01/151233.html?title=weLikeTwitterSoBloggingMustBeDead) to a certain microblogging service as "Twitter." Glad I'm not the only one! 😸
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
