Writing through news summaries

--- a/2025/2025-10-05-wir.md
+++ b/2025/2025-10-05-wir.md
@@ -10,8 +10,6 @@
 
 - Bitcoin flirted with a new record Friday. https://www.coindesk.com/markets/2025/10/03/bitcoin-surges-above-usd123k-nearing-new-record-as-bullish-q4-sentiment-fuels-weeklong-rally | https://www.coindesk.com/research/stablecoins-and-cbdcs-report-september-2025
 
-- Lubin: Crypto has no time for "silly partisan politics." Block coverage of his recent reamarks: https://www.theblock.co/post/373207/partisan-politics-consensys-joe-lubin |  Wikipedia entry: https://en.wikipedia.org/wiki/Joseph_Lubin_(entrepreneur)
-
 - SWIFT is working on a ledger for cross-border payments. ([CoinDesk](https://www.coindesk.com/business/2025/09/29/swift-to-develop-blockchain-based-ledger-for-24-7-cross-border-payments)) <!-- Beware the paywall on this one. May need to find a more permissive link. -->
 
 - EU sounds alarm on stablecoins. https://decrypt.co/342858/eu-risk-watchdog-sounds-alarm-on-stablecoin-safeguards | Stablecoin market cap surpasses $300B https://www.theblock.co/post/373314/stablecoin-market-cap-surpasses-300-billion-for-first-time-amid-crypto-rebound
@@ -20,11 +18,12 @@
 
 ### Week in Review: Sept. 28 to Oct. 4, 2025
 
-- **DAT shakeout:** After a summer of enthusiasm, corporate interest in stockpiling cryptocurrencies like bitcoin has cooled, with many companies seeing their shares drop and some trading below the value of their digital-asset holdings. The slowdown is attributed to an oversupply of crypto treasury companies and regulatory scrutiny, though some are exploring mergers and acquisitions to consolidate their positions. | The allure of cryptocurrencies is losing steam for some companies, as a glut of crypto treasury firms and increased regulatory scrutiny have led to a decline in their value and trading below their digital holdings. However, some firms are exploring consolidation through mergers and acquisitions to stay afloat in the shifting market. ([Wall Street Journal](https://www.wsj.com/finance/currencies/crypto-stockpiling-craze-cools-after-red-hot-summer-d1b6dce2?st=StdiWh&reflink=desktopwebshare_permalink)) <!-- Draft news summaries by Leo/Llama 3.1 8B --> | The US Securities and Exchange Commission (SEC) has temporarily suspended trading of QMMM Holdings due to concerns over potential stock manipulation linked to the firm's pivot into cryptocurrency holdings. The suspension comes as part of a broader investigation into several companies over similar crypto-linked stock surges, highlighting the risks and potential pitfalls of crypto treasury strategies that have become increasingly popular among small-cap firms. ([Cryptonews](https://cryptonews.com/news/sec-suspends-trading-of-qmmm-holdings-amid-crypto-treasury-manipulation-probe/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
--  OpenAI's latest funding round values the company at $500 billion, which tops SpaceX's capitalization. LOL. https://finance.yahoo.com/news/openai-completes-share-sale-record-043148719.html
-- The scramble for global tech workers: Fear among SV green card holders due to U.S. tightening on H1-B visas. https://www.mercurynews.com/2025/04/05/h1b-foreign-tech-workers-silicon-valley-travel-fears/ ([San Jose Mercury News](https://www.mercurynews.com/2025/04/05/h1b-foreign-tech-workers-silicon-valley-travel-fears/)) | China looking to exploit it as an opportunity to lure away talent: https://www.reuters.com/sustainability/sustainable-finance-reporting/chinas-new-k-visa-beckons-foreign-tech-talent-us-hikes-h-1b-fee-2025-09-29/ | And so is Canada: https://www.cicnews.com/2025/09/canada-to-target-tech-talent-us-fee-hike-0960276.html | Chip deal with UAE on the rocks: https://www.wsj.com/politics/policy/nvidia-trump-uae-chip-deal-delay-c49aaa5c
-- **Americans' access to crypto on their smartphones is improving.** Samsung announced it has [integrated Coinbase access](https://decrypt.co/342859/samsung-brings-coinbase-access-75m-wallet-users-latest-crypto-embrace) into the latest version of its mobile wallet app for U.S. users... Separately, the fintech startup OnePay, which is majority-owned by Walmart, said it will soon offer crypto trading and custody [through its mobile app](https://www.cnbc.com/2025/10/03/walmart-onepay-is-rolling-out-crypto-to-mobile-banking-app.html).
-- **California just passed** a major AI safety law, thus setting stricter standards for the crucial Silicon Valley region. The new law requires AI companies to report what safety protocols they use in developing their software and the risks posed by their products. ([New York Times](https://www.nytimes.com/2025/09/29/technology/california-ai-safety-law.html))
+- **Crypto treasury companies' shares** have [sagged lately](https://www.wsj.com/finance/currencies/crypto-stockpiling-craze-cools-after-red-hot-summer-d1b6dce2?st=StdiWh&reflink=desktopwebshare_permalink), with many trading below the value of their token holdings. Meanwhile, the U.S. Securities and Exchange Commission [suspended trading](https://cryptonews.com/news/sec-suspends-trading-of-qmmm-holdings-amid-crypto-treasury-manipulation-probe/) of QMMM Holdings over potential stock manipulation around its recent announcement of plans to buy bitcoin, ether, and Solana tokens.
+- **America's anti-immigration push is reverberating globally in tech.** Reuters reports that Silicon Valley companies are weighing whether to [move more jobs offshore](https://www.reuters.com/sustainability/sustainable-finance-reporting/silicon-valley-hiring-turmoil-after-new-h-1b-visa-fees-move-spurs-offshoring-2025-09-23/) after the White House announced a new $100,000 fee for H-1B visas, often used for software engineers and other high-skilled foreigners. Meanwhile, other countries are already angling to attract tech talent that might otherwise move to the U.S. China is launching a [new "K visa" program](https://www.reuters.com/sustainability/sustainable-finance-reporting/chinas-new-k-visa-beckons-foreign-tech-talent-us-hikes-h-1b-fee-2025-09-29/) to attract such workers. And Canadian Prime Minister Mark Carney said his government is exploring ways to embrace America's H-1B fee hike [as an "opportunity"](https://www.cicnews.com/2025/09/canada-to-target-tech-talent-us-fee-hike-0960276.html) to attract tech workers to Canada instead.
+- **The Wall Street Journal reports** Nvidia CEO Jensen Huang is frustrated that implementation of a chips deal previously announced by the White House [has stalled](https://www.wsj.com/politics/policy/nvidia-trump-uae-chip-deal-delay-c49aaa5c?st=8hducg&reflink=desktopwebshare_permalink). Under the agreement, the U.S. Commerce Department is supposed to allow Nvidia to export billions of dollars worth of AI chips to the United Arab Emirates.
+-  **OpenAI closed a funding round valuing the company at $500 billion.** That makes it the most valuable privately held company in the world, surpassing SpaceX. ([Bloomberg](https://finance.yahoo.com/news/openai-completes-share-sale-record-043148719.html))
+- **California just passed a major AI safety law,** thus setting stricter standards for the crucial Silicon Valley region. The new law requires AI companies to report what safety protocols they use in developing their software and the risks posed by their products. ([New York Times](https://www.nytimes.com/2025/09/29/technology/california-ai-safety-law.html))
+
 
 ### Market Snapshot
 
@@ -84,11 +83,12 @@
 ### Looking Ahead
 
 - **Wall Street giant Vanguard** is considering whether to allow clients to trade exchange-traded funds (ETFs) that hold bitcoin or other digital assets on investors' behalf. Vanguard, which is the world's second-largest asset manager, has been a notable holdout on crypto ETFs since Washington regulators approved them for U.S. trading in January 2024. ([The Block](https://www.theblock.co/post/372531/vanguard-crypto-etf-access))
+- **Americans' access to crypto on their smartphones is improving.** Samsung announced it has [integrated Coinbase access](https://decrypt.co/342859/samsung-brings-coinbase-access-75m-wallet-users-latest-crypto-embrace) into the latest version of its mobile wallet app for U.S. users... Separately, the fintech startup OnePay, which is majority-owned by Walmart, said it will soon offer crypto trading and custody [through its mobile app](https://www.cnbc.com/2025/10/03/walmart-onepay-is-rolling-out-crypto-to-mobile-banking-app.html).
 - **OKX founder Star Xu praised regulators** in Washington and London for their increasing alignment on oversight of digital assets. He says closer collaboration could help further entrench the U.S. and Britain as global finance centers versus aspiring hubs like Singapore and Dubai. ([Fortune](https://fortune.com/crypto/2025/09/29/the-u-s-and-u-k-are-aligning-on-blockchain-and-thats-good-for-the-world-economy/))
 
 ### Odds & Ends
 
-- **Economist David Berri took a stab** at quantifying how underpaid WNBA players are compared to men in the NBA. While the men's league does bring in 50 times the revenue of the WNBA, its top players make 200 times the salaries of the WNBA's stars, Berri says. ([Economist](https://news.google.com/read/CBMid0FVX3lxTE9kNjF0UFQ3NWt6d0JGelRRZzY3Mm9BN2ppbWZlbXRhUEpscndZTjl1bmprV2pmQU05NjZBeU41LU9DVjlCQnVORWl4ZmtTaERzMWdaQ1hnUHAwZ1FfaU1hZU9rd184TlhRVFpCSUJnN19RS1prdWxn?hl=en-US&gl=US&ceid=US%3Aen))
+- **Economist David Berri took a stab** at quantifying how underpaid WNBA players are compared to men in the NBA. While the men's league does bring in 50 times the revenue of the WNBA, its top players make 200 times the salaries of the WNBA's stars, Berri says. ([New York Times](https://news.google.com/read/CBMid0FVX3lxTE9kNjF0UFQ3NWt6d0JGelRRZzY3Mm9BN2ppbWZlbXRhUEpscndZTjl1bmprV2pmQU05NjZBeU41LU9DVjlCQnVORWl4ZmtTaERzMWdaQ1hnUHAwZ1FfaU1hZU9rd184TlhRVFpCSUJnN19RS1prdWxn?hl=en-US&gl=US&ceid=US%3Aen))
 - **Count web pioneer Dave Winer** among the folks who [still refer](http://scripting.com/2025/10/01/151233.html?title=weLikeTwitterSoBloggingMustBeDead) to a certain microblogging service as "Twitter." Glad I'm not the only one! 😸
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
