Writing through news summaries

--- a/2025/2025-10-05-wir.md
+++ b/2025/2025-10-05-wir.md
@@ -82,7 +82,7 @@
 
 ### Looking Ahead
 
-- **Wall Street giant Vanguard** is considering whether to allow clients to trade exchange-traded funds (ETFs) that hold bitcoin or other digital assets on investors' behalf. Vanguard, which is the world's second-largest asset manager, has been a notable holdout on crypto ETFs since Washington regulators approved them for U.S. trading in January 2024. ([The Block](https://www.theblock.co/post/372531/vanguard-crypto-etf-access))
+- **Wall Street giant Vanguard** is considering whether to allow clients to trade exchange-traded funds (ETFs) that hold bitcoin or other digital assets on investors' behalf. Vanguard, which is the world's second-largest asset manager, has been a notable holdout on offering crypto ETFs since Washington regulators approved them for U.S. trading in January 2024. ([The Block](https://www.theblock.co/post/372531/vanguard-crypto-etf-access))
 - **Americans' access to crypto on their smartphones is improving.** Samsung announced it has [integrated Coinbase access](https://decrypt.co/342859/samsung-brings-coinbase-access-75m-wallet-users-latest-crypto-embrace) into the latest version of its mobile wallet app for U.S. users... Separately, the fintech startup OnePay, which is majority-owned by Walmart, said it will soon offer crypto trading and custody [through its mobile app](https://www.cnbc.com/2025/10/03/walmart-onepay-is-rolling-out-crypto-to-mobile-banking-app.html).
 - **OKX founder Star Xu praised regulators** in Washington and London for their increasing alignment on oversight of digital assets. He says closer collaboration could help further entrench the U.S. and Britain as global finance centers versus aspiring hubs like Singapore and Dubai. ([Fortune](https://fortune.com/crypto/2025/09/29/the-u-s-and-u-k-are-aligning-on-blockchain-and-thats-good-for-the-world-economy/))
 
