Writing through lead item

--- a/2025/2025-10-05-wir.md
+++ b/2025/2025-10-05-wir.md
@@ -4,17 +4,27 @@
 ![Collage of different countries' currencies](https://w3w.news/img/cash-john-mcarthur-unsplash-2500.jpg)
 *Photo by John McArthur via [Unsplash](https://unsplash.com/@snowjam)*
 
-**Lead item goes here.** Yadda yadda yadda.
+**Sometime this year,** I think we quietly passed a milestone in the U.S. dollar's gradual replacement as the global reserve currency.
 
-- JPM sees bitcoin benefiting from a "debasement trade" ([The Block](https://www.theblock.co/post/373241/jpmorgan-bitcoin-price-165000-debasement-trade))
+In terms of market sentiment and narrative, this scenario suddenly seems to have gone quite mainstream, embraced even among [Wall Street pros](https://www.theblock.co/post/373241/jpmorgan-bitcoin-price-165000-debasement-trade) and [Ivy League economists](https://www.youtube.com/watch?v=pT2cohNt6a4). To paraphrase a famous saying about change often [misattributed to Mahatma Gandhi](https://www.snopes.com/fact-check/first-they-ignore-you/), we are now definitively past the stages where someone might be laughed at or summarily ignored for saying the greenback could lose its "extravagant privilege" in the speaker's lifetime.
 
-- Bitcoin flirted with a new record Friday. https://www.coindesk.com/markets/2025/10/03/bitcoin-surges-above-usd123k-nearing-new-record-as-bullish-q4-sentiment-fuels-weeklong-rally | https://www.coindesk.com/research/stablecoins-and-cbdcs-report-september-2025
+So far, the big winners in the marketplace from this sentiment shift have been gold and bitcoin. The latter just hit a [fresh all-time high](https://finance.yahoo.com/news/bitcoin-hits-time-high-price-054618719.html) above $125,000 per token in weekend trading, driven by heavy buying in Asia.
 
-- SWIFT is working on a ledger for cross-border payments. ([CoinDesk](https://www.coindesk.com/business/2025/09/29/swift-to-develop-blockchain-based-ledger-for-24-7-cross-border-payments)) <!-- Beware the paywall on this one. May need to find a more permissive link. -->
+Washington's [government shutdown](https://www.cnn.com/politics/live-news/government-shutdown-news-10-05-25) and the Federal Reserve's [recent interest-rate cut](https://www.cbsnews.com/news/federal-reserve-fomc-meeting-today-rate-cut-september-2025-powell-impact/) have increased traders' appetite for risker bets, including alternative stores of value in lieu of holding dollars.
 
-- EU sounds alarm on stablecoins. https://decrypt.co/342858/eu-risk-watchdog-sounds-alarm-on-stablecoin-safeguards | Stablecoin market cap surpasses $300B https://www.theblock.co/post/373314/stablecoin-market-cap-surpasses-300-billion-for-first-time-amid-crypto-rebound
+Analysts at JPMorgan issued a report Wednesday saying bitcoin could [hit $165,000 by year's end](https://www.theblock.co/post/373241/jpmorgan-bitcoin-price-165000-debasement-trade), driven by a continued "debasement trade."
 
-<!-- Riff on new market quotes, MSCI vs Nasdaq 100. -->
+The term refers to the idea that persistent U.S. government deficits, financed through Treasury bond issuance and lower interest-rate targets from the Fed, effectively increase the supply of dollars coursing through the global economy. In turn, that devalues dollars and increases the appeal of other forms of money among investors.
+
+As I've [written before](https://www.linkedin.com/pulse/yes-de-dollarization-real-risk-peter-mckay/?trackingId=nZZyJu0lRrazXa4V2ix3ag%3D%3D), it also strikes me that the rest of the world is increasingly frustrated with America's political dysfunction. The latest shutdown just underscores that point, perhaps providing further incentive for foreigners to back away from relying on America's currency as their standard.
+
+Some related developments to watch:
+
+- **Valuation of the global stablecoin market,** which allows users to execute dollar-denominated transactions on-chain without using traditional banks, just [topped $300 billion](https://www.theblock.co/post/373314/stablecoin-market-cap-surpasses-300-billion-for-first-time-amid-crypto-rebound) for the first time. European Union regulators [are concerned](https://decrypt.co/342858/eu-risk-watchdog-sounds-alarm-on-stablecoin-safeguards) that usage of such tokens could create liquidity crunches within the bloc at some point.
+
+- **Swift,** a cooperative that operates the global infrastructure for trillions of dollars in traditional bank transfers each week, is [building a new Ethereum-based system](https://www.theblock.co/post/372706/swift-blockchain-ledger-consensys) for cross-border payments.
+
+On to the notable tech headlines elsewhere...
 
 ### Week in Review: Sept. 28 to Oct. 4, 2025
 
