Adding headline, subhed with an assist from Copilot

--- a/2025/2025-10-05-wir.md
+++ b/2025/2025-10-05-wir.md
@@ -1,5 +1,5 @@
-# TKTK
-## TKTK
+# The Dollar’s Diminishing Reign
+## It's no longer a fever dream. U.S. deficits and chaotic policy are driving investors toward other stores of value.
 
 ![Collage of different countries' currencies](https://w3w.news/img/cash-john-mcarthur-unsplash-2500.jpg)
 *Photo by John McArthur via [Unsplash](https://unsplash.com/@snowjam)*
